// Vitest Snapshot v1

exports[`Popconfirm 组件测试 > Popcontent - icon & theme snapshots 1`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        style="color: rgb(255, 62, 0);"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <span
        class="t-popconfirm__cancel"
      />
      <span
        class="t-popconfirm__confirm"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popconfirm 组件测试 > Popcontent - icon & theme snapshots 2`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        style="color: rgb(255, 170, 0);"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <span
        class="t-popconfirm__cancel"
      />
      <span
        class="t-popconfirm__confirm"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popconfirm 组件测试 > Popcontent - icon & theme snapshots 3`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        style="color: rgb(0, 82, 217);"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <span
        class="t-popconfirm__cancel"
      />
      <span
        class="t-popconfirm__confirm"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popconfirm 组件测试 > Popcontent - icon & theme snapshots 4`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        style="color: rgb(0, 82, 217);"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <span
        class="t-popconfirm__cancel"
      />
      <span
        class="t-popconfirm__confirm"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popconfirm 组件测试 > Popcontent - icon & theme snapshots 5`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-check-circle"
        fill="none"
        height="1em"
        style="color: rgb(255, 62, 0);"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M4.5 8.2L7 10.7l4.5-4.5-.7-.7L7 9.3 5.2 7.5l-.7.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
        <path
          d="M4.11 2.18a7 7 0 117.78 11.64A7 7 0 014.1 2.18zm.56 10.8a6 6 0 106.66-9.97A6 6 0 004.67 13z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <span
        class="t-popconfirm__cancel"
      />
      <span
        class="t-popconfirm__confirm"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popconfirm 组件测试 > Popcontent - icon & theme snapshots 6`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <span
        style="color: rgb(255, 62, 0);"
      >
        CustomIcon
      </span>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <span
        class="t-popconfirm__cancel"
      />
      <span
        class="t-popconfirm__confirm"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popconfirm 组件测试 > Popcontent - icon & theme snapshots 7`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-check-circle"
        fill="none"
        height="1em"
        style="color: rgb(0, 82, 217);"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M4.5 8.2L7 10.7l4.5-4.5-.7-.7L7 9.3 5.2 7.5l-.7.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
        <path
          d="M4.11 2.18a7 7 0 117.78 11.64A7 7 0 014.1 2.18zm.56 10.8a6 6 0 106.66-9.97A6 6 0 004.67 13z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <span
        class="t-popconfirm__cancel"
      />
      <span
        class="t-popconfirm__confirm"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popconfirm 组件测试 > Popcontent - icon & theme snapshots 8`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-check-circle"
        fill="none"
        height="1em"
        style="color: rgb(0, 82, 217);"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M4.5 8.2L7 10.7l4.5-4.5-.7-.7L7 9.3 5.2 7.5l-.7.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
        <path
          d="M4.11 2.18a7 7 0 117.78 11.64A7 7 0 014.1 2.18zm.56 10.8a6 6 0 106.66-9.97A6 6 0 004.67 13z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <span
        class="t-popconfirm__cancel"
      />
      <span
        class="t-popconfirm__confirm"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Popconfirm 组件测试 > Popcontent - icon & theme snapshots 9`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        style="color: rgb(255, 62, 0);"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <span
        class="t-popconfirm__cancel"
      />
      <span
        class="t-popconfirm__confirm"
      />
    </div>
  </div>
</DocumentFragment>
`;
